--- a/sb.html
+++ b/sb.html
@@ -163,7 +163,7 @@
    </div>
   </div>
   <div class="footer">
-   All rights reserved to GSRA BANKS
+   All rights reserved to GSRA BANK
   </div>
   <script src="./sb.js"></script>
  </body>
