--- a/sb.html
+++ b/sb.html
@@ -9,7 +9,7 @@
  </head>
  <body>
   <div class="header">
-   <img alt="GSRA BANKS Logo" height="50" src="./logo.jpg" width="100"/>
+   <img alt="GSRA BANKS Logo" height="50" src="./images/logo.jpg" width="100"/>
    <div class="nav-links">
     <a href="#">
      What's New
