--- a/sb.html
+++ b/sb.html
@@ -17,13 +17,13 @@
     <a href="#">
      About GSRA
     </a>
-    <a href="#">
+    <a href="./customerRegister.html">
      Registration Forms
     </a>
     <a class="language" href="#">
      Language
     </a>
-    <a class="logout" href="#">
+    <a class="logout" href="./index.html">
      <i class="fas fa-power-off">
      </i>
      LOGOUT
