--- a/ac.html
+++ b/ac.html
@@ -2,104 +2,41 @@
 <head>
     <title>Account Information</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-        .header {
-            background-color: #4a8a8a;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            position: relative;
-        }
-        .header .profile-pic {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            background-color: #6c757d;
-            display: inline-block;
-            line-height: 60px;
-            font-size: 24px;
-            color: white;
-            text-align: center;
-            position: absolute;
-            top: 20px;
-            left: 20px;
-        }
-        .header h1 {
-            margin: 0;
-            font-size: 24px;
-        }
-        .container {
-            display: flex;
-            justify-content: space-around;
-            padding: 20px;
-        }
-        .card {
-            background-color: white;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            width: 45%;
-            padding: 20px;
-        }
-        .card-header {
-            background-color: #4a8a8a;
-            color: white;
-            padding: 10px;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .card-header i {
-            cursor: pointer;
-        }
-        .card-content {
-            padding: 10px;
-        }
-        .card-content p {
-            margin: 5px 0;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table th, table td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        table th {
-            background-color: #4a8a8a;
-            color: white;
-        }
-        .fab-button {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: #4a8a8a;
-            color: white;
-            width: 56px;
-            height: 56px;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 24px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="./ac.css">
 </head>
-<body>
-    <div class="header">
-        <div class="profile-pic">LN</div>
-        <h1>Léonstar Nougat</h1>
+<body> <div class="header">
+    <img alt="GSRA BANKS Logo" height="50" src="./images/logo.jpg" width="100"/>
+    <div class="nav-links">
+     <a href="#">
+      What's New
+     </a>
+     <a href="#">
+      About GSRA
+     </a>
+     <a href="./customerRegister.html">
+      Registration Forms
+     </a>
+     <a class="language" href="#">
+      Language
+     </a>
+     <a class="logout" href="./index.html">
+      <i class="fas fa-power-off">
+      </i>
+      LOGOUT
+     </a>
+    </div>
+   </div>
+   
+
+<div class="tabs">
+    <a href="./sb.html" class="tab">HOME</a>
+    <a href="./fund.html" class="tab">Transfer</a>
+    <a href="./ac.html" class="tab active">Account info</a>
+    
+</div>
+    <div class="header1">
+        <div class="profile-pic">DM</div>
+        <h1>Demo Account</h1>
     </div>
     <div class="container">
         <div class="card">
@@ -108,12 +45,12 @@
                 <i class="fas fa-edit"></i>
             </div>
             <div class="card-content">
-                <p>Customer : Léonstar Nougat</p>
+                <p>Customer : Demo Account</p>
                 <p>Code : 00000004</p>
-                <p>Balance : 7.8521071E8</p>
-                <p>Creation date : mai 19, 2019 - 08:22</p>
+                <p>Balance : 785210718</p>
+                <p>Creation date : may 19, 2019,  09:22 AM</p>
                 <p>Type : Savings Account</p>
-                <p>Interest Rate : 0.0</p>
+                <p>Interest Rate : 1.0</p>
             </div>
         </div>
         <div class="card">
@@ -134,19 +71,19 @@
                         <tr>
                             <td>6</td>
                             <td>Payment</td>
-                            <td>mai 19, 2019 - 08:25</td>
-                            <td>7.85210365E8</td>
+                            <td>may 19, 2019 - 08:25</td>
+                            <td>7852103658</td>
                         </tr>
                         <tr>
                             <td>5</td>
                             <td>Withdrawal</td>
-                            <td>mai 19, 2019 - 08:25</td>
+                            <td>may 19, 2019 - 08:25</td>
                             <td>7505.0</td>
                         </tr>
                         <tr>
                             <td>4</td>
                             <td>Payment</td>
-                            <td>mai 19, 2019 - 08:24</td>
+                            <td>may 19, 2019 - 08:24</td>
                             <td>7850.0</td>
                         </tr>
                     </tbody>
