--- a/Frontend/customerRegister.html
+++ b/Frontend/customerRegister.html
@@ -97,13 +97,14 @@
                     <br><br>
 
                     <label for="address" required>Present Address</label>
-                    <textarea id="address" name="faddress" placeholder="Enter Present address" required></textarea>
-                </form>
+                    <textarea id="address1" name="faddress" placeholder="Enter Present address" required></textarea>
+                
             </div>
         </div>
          <button type="submit">
                Register 
             </button>
+        </form>
     </section>
     
     </div>
