--- a/Frontend/sb.html
+++ b/Frontend/sb.html
@@ -42,7 +42,7 @@
     Payments / Transfers
    </a>
    
-   <a href="#">
+   <a href="./deposit.html">
     <i class="fas fa-piggy-bank">
     </i>
     Deposit &amp; Investment
